--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,12 @@
 {
   "image": "mcr.microsoft.com/devcontainers/universal:2",
   "features": {
-  }
+},
+"customizations": {
+	"vscode": {
+		"extensions": [
+			"ms-vscode.cpptools"
+		]
+	}
+}
 }
