--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,15 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
-
         {
-   
-         "name": "Python: Current File",
+            "name": "Python: Module",
+            "type": "python",
+            "request": "launch",
+            "module": "enter-your-module-name",
+            "justMyCode": true
+        },
+        {
+            "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
